--- a/src/app/modules/reports/zone-branch-wise-recovery-report/zone-branch-wise-recovery-report.component.html
+++ b/src/app/modules/reports/zone-branch-wise-recovery-report/zone-branch-wise-recovery-report.component.html
@@ -42,7 +42,7 @@
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Working Date (ddMMyyyy) <strong class="matMandatory">*</strong>
                                             </mat-label>
-                                            <input matInput [matDatepicker]="picker2" formControlName="WorkingDate" maxlength="30"
+                                            <input matInput [matDatepicker]="picker2" formControlName="WorkingDate" maxlength="30" [max]="currentTime"
                                                    autocomplete="off" (dateChange)="setDate()" appNumberOnly/>
                                             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                                             <mat-datepicker #picker2></mat-datepicker>
