--- a/src/app/modules/reports/enabling-disabling-user-overtime/enabling-disabling-user-overtime.component.html
+++ b/src/app/modules/reports/enabling-disabling-user-overtime/enabling-disabling-user-overtime.component.html
@@ -31,10 +31,44 @@
 
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
-                                    <app-zone-branch-circle (branchZoneCircleData)="getAllData($event)" [form]="bufricationForm"
-                                                            [is_required_circle]="false"
-                                                            [should_filter]="false"
-                                                            [show_circle]="false"></app-zone-branch-circle>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                                        <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
+                                            <mat-label class="customMatLabel">PPNO<strong
+                                                class="matMandatory">*</strong></mat-label>
+                                            <input appNumberOnly autocomplete="off" formControlName="PPNo"
+                                                   matInput placeholder="Enter PPNO"/>
+                                        </mat-form-field>
+                                    </div>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
+                                         style="width: 225px;">
+                                        <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
+                                            <mat-label class="customMatLabel">From Date<strong
+                                                class="matMandatory">*</strong>
+                                            </mat-label>
+                                            <input (dateChange)="isEnableFromDate()" [matDatepicker]="picker2" appNumberOnly
+                                                   autocomplete="off"
+                                                   formControlName="FromDate" matInput maxlength="30"/>
+                                            <mat-datepicker-toggle [for]="picker2" matSuffix></mat-datepicker-toggle>
+                                            <mat-datepicker #picker2></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
+
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
+                                         style="width: 225px;">
+                                        <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
+                                            <mat-label class="customMatLabel">To Date<strong
+                                                class="matMandatory">*</strong>
+                                            </mat-label>
+                                            <input (dateChange)="isEnableToDate()" [matDatepicker]="picker3" appNumberOnly
+                                                   autocomplete="off"
+                                                   formControlName="ToDate" matInput maxlength="30"/>
+                                            <mat-datepicker-toggle [for]="picker3" matSuffix></mat-datepicker-toggle>
+                                            <mat-datepicker #picker3></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
@@ -60,3 +94,4 @@
 
     </div>
 </div>
+
