--- a/src/app/modules/reports/zone-branch-wise-recovery-report/zone-branch-wise-recovery-report.component.html
+++ b/src/app/modules/reports/zone-branch-wise-recovery-report/zone-branch-wise-recovery-report.component.html
@@ -79,8 +79,8 @@
         <div class="collapse show" id="collapseExample">
             <div class="mt-4" id="pdfTable" #pdfTable>
                 <div class="col-lg-12">
-                    <div class="col-lg-9 col-sm-12">
-                        <div class="heading">General Recovery</div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="sub-heading">General Recovery</div>
                     </div>
 
                     <div  class="col-lg-12 p-0 border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
@@ -172,8 +172,8 @@
                 </div>
 
                 <div class="col-lg-12">
-                    <div class="col-lg-9 col-sm-12">
-                        <div class="heading">NPLs</div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="sub-heading">NPLs</div>
                     </div>
 
                     <div class="col-lg-12 p-0  border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
@@ -256,8 +256,8 @@
 
 
                 <div class="col-lg-12">
-                    <div class="col-lg-9 col-sm-12">
-                        <div class="heading">Sam Recovery</div>
+                    <div class="col-lg-12 col-sm-12">
+                        <div class="sub-heading">Sam Recovery</div>
                     </div>
 
                     <div class="col-lg-12 p-0  border shadow-xs rounded-sm bg-gray-50 mt-2 mb-2">
