--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -206,7 +206,7 @@
                     <table class="table table-striped">
                         <thead>
                         <tr class="table-header-background">
-                            <th>S#</th>
+                            <th>Serial #</th>
                             <th>Branch</th>
                             <th>Disbursement</th>
                             <th>Recovery</th>
